# ConformerEnsemble

./: .gitignore  BENCH_RESULTS.md  Cargo.toml  LICENSE  README.md  demo.xyz  pixi.toml  pyproject.toml
.github/workflows/: python.yml  rust.yml
benches/: drmsd_bench.rs  rmsd_bench.rs
python/conformerensemble/: __init__.py  _api.py  cli.py
python/conformerensemblepy/: __init__.py  _api.py  cli.py
python/conformerensemblers/: __init__.py
src/: drmsd.rs  drmsd_simd.rs  elements.rs  ensemble.rs  error.rs  filter.rs  geometry.rs  inertia.rs  lib.rs  python.rs  rmsd.rs  rmsd_simd.rs  xyz_io.rs
tests/: integration.rs  test_cli.py  test_filter_compat.py  test_wrapper_api.py
